api: Implement role.
